Update header section in index.html

--- a/index.html (11).html
+++ b/index.html (11).html
@@ -91,19 +91,20 @@
 </head>
 <body>
   <div class="container">
-    <header>
+     <header>
       <div class="brand">
-        <div class="logo">
-  <img 
-    alt="AFH Digital Handelsbolag"
+       <div class="logo">
+  <img
+    src="logga.png"
+    alt="AFH Digital"
     style="height:48px;width:auto;display:block;"
-    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAyAAAAJYCAYAAACadoJwAAAACXBIWXMAAAsSAAALEgHS3X78AAAgAElEQVR4nO3deZBcZ33n8e9H...REPLACE_WITH_FULL_STRING"
-  />
+  >
 </div>
-        <div>
-          <strong>AFH Digital</strong><br>
-          <small style="color:var(--muted)">Automatiserad support för småföretag</small>
-        </div>
+
+<div>
+  <strong>AFH Digital</strong><br>
+  <small style="color:var(--muted)">Automatiserad support för småföretag</small>
+</div>
       </div>
       <nav>
         <a href="#tjanster">Tjänster</a>
