--- a/index.html (11).html
+++ b/index.html (11).html
@@ -128,7 +128,7 @@
           <div class="pricing-grid">
             <div class="price">
   <h3>Support Starter</h3>
-  <div class="amount">1 000–2 500 kr / mån</div>
+  <div class="amount">1 899/ mån</div>
 
   <ul style="margin:0;padding-left:18px;color:var(--muted)">
     <li>AI-baserad FAQ & webbchatt</li>
