Fix wording in support package overview

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -211,7 +211,7 @@
 
     <h2 style="text-align:center">Välj rätt paket för ert företag</h2>
     <p style="text-align:center; color:var(--muted); max-width:620px; margin:8px auto 28px;">
-      En översikt över vad våra olika supportpaket är tänkta att innehålla.
+      En översikt över vad våra olika supportpaket innehåller
     </p>
 
     <div class="package-grid">
