--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -145,6 +145,7 @@
   </div>
 </div>
             <div class="price">
+              <span class="badge-popular">Populärast</span>
               <h3>Support Pro</h3>
               <div class="amount">5 990 kr / mån</div>
               <ul style="margin:0;padding-left:18px;color:var(--muted)">
