--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -145,7 +145,26 @@
   </div>
 </div>
             <div class="price">
-              <span class="badge-popular">Populärast</span>
+             .price.popular {
+  border: 2px solid #9fb8a0; /* salviagrön */
+  box-shadow: 0 12px 30px rgba(0,0,0,0.08);
+  position: relative;
+}
+
+.badge-popular {
+  position: absolute;
+  top: -12px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #9fb8a0; /* salviagrön */
+  color: #0f2a1a;      /* mörk grön text */
+  padding: 6px 14px;
+  border-radius: 999px;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 0.02em;
+}
+
               <h3>Support Pro</h3>
               <div class="amount">5 990 kr / mån</div>
               <ul style="margin:0;padding-left:18px;color:var(--muted)">
