Enhance price section with styling and label

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -144,10 +144,33 @@
     <a class="btn ghost" href="#starter">Läs mer</a>
   </div>
 </div>
-            <div class="price">
-           
-              <h3>Support Pro</h3>
-              <div class="amount">5 990 kr / mån</div>
+        <div class="price" style="position:relative; border:2px solid #c96b6b; box-shadow:0 12px 30px rgba(0,0,0,0.08);">
+
+  <span
+    style="
+      position:absolute;
+      top:-12px;
+      left:50%;
+      transform:translateX(-50%);
+      background:#c96b6b;
+      color:#ffffff;
+      padding:6px 14px;
+      border-radius:999px;
+      font-size:12px;
+      font-weight:700;
+      letter-spacing:0.02em;
+    "
+  >
+    Populärast
+  </span>
+
+  <h3>Support Pro</h3>
+  <div class="amount">5 990 kr / mån</div>
+
+  <!-- resten av ditt Pro-innehåll ska vara kvar här -->
+</div>
+
+</div>
               <ul style="margin:0;padding-left:18px;color:var(--muted)">
   <li>Omnichannel + röst-AI</li>
   <li>Ticket-automatisering</li>
