Refactor price div styling in index.html

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -143,8 +143,7 @@
     <a class="btn primary" href="#kontakt">Starta demo</a>
     <a class="btn ghost" href="#starter">Läs mer</a>
   </div>
-</div>
-        <div class="price" style="position:relative; border:2px solid #c96b6b; box-shadow:0 12px 30px rgba(0,0,0,0.08);">
+<div class="price" style="position:relative;">
 
   <span
     style="
@@ -165,6 +164,7 @@
   </span>
 
   <h3>Support Pro</h3>
+
   <div class="amount">5 990 kr / mån</div>
 
   <!-- resten av ditt Pro-innehåll ska vara kvar här -->
