Add 'Popular' badge to price section

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -144,7 +144,8 @@
     <a class="btn ghost" href="#starter">Läs mer</a>
   </div>
 </div>
-            <div class="price">
+            <div class="price"><span class="badge-popular">Populärast</span>
+
               <h3>Support Pro</h3>
               <div class="amount">5 990 kr / mån</div>
               <ul style="margin:0;padding-left:18px;color:var(--muted)">
