Enhance popular badge styling in pricing section
Added styling to the popular badge in the pricing section.

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -144,7 +144,21 @@
     <a class="btn ghost" href="#starter">Läs mer</a>
   </div>
 </div>
-            <div class="price"><span class="badge-popular">Populärast</span>
+            <div class="price"><span
+  style="
+    background:rgba(201,107,107,0.15);
+    color:#8b3a3a;
+    border:1px solid #c96b6b;
+    padding:4px 10px;
+    border-radius:999px;
+    font-size:11px;
+    font-weight:700;
+    letter-spacing:0.02em;
+  "
+>
+   Populärast
+</span>
+
 
               <h3>Support Pro</h3>
               <div class="amount">5 990 kr / mån</div>
