--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -144,7 +144,8 @@
     <a class="btn ghost" href="#starter">Läs mer</a>
   </div>
 </div>
-            <div class="price"><span
+            <div class="price" style="border:2px solid #c96b6b;">
+span
   style="
     background:rgba(201,107,107,0.15);
     color:#8b3a3a;
