Refactor pricing section with styles and badge
Updated the pricing section to include styling and a popularity badge.

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -144,14 +144,29 @@
     <a class="btn ghost" href="#starter">Läs mer</a>
   </div>
 </div>
-            <div class="price"  letter-spacing:0.02em;
-  "
->
-   Populärast
+            <div class="price"> 
+  
+
+  
 </span>
 
 
-              <h3>Support Pro</h3>
+              <h3 style="display:flex; align-items:center; gap:8px;">
+  Support Pro
+  <span
+    style="
+      background:#c96b6b;
+      color:#ffffff;
+      padding:4px 10px;
+      border-radius:999px;
+      font-size:11px;
+      font-weight:700;
+      letter-spacing:0.02em;
+    "
+  >
+    Populärast
+  </span>
+</h3>
               <div class="amount">5 990 kr / mån</div>
               <ul style="margin:0;padding-left:18px;color:var(--muted)">
   <li>Omnichannel + röst-AI</li>
