Add placeholder card for future content

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -212,6 +212,10 @@
           </form>
           <small style="color:var(--muted);display:block;margin-top:10px">Vi kontaktar er inom 1 arbetsdag för att boka demo.</small>
         </div>
+        <div class="card">
+  <!-- Tom ruta, innehåll kommer senare -->
+</div>
+
 
        
 
