Add customer testimonials to the index page
Added customer testimonial section to the card.

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -213,10 +213,12 @@
           <small style="color:var(--muted);display:block;margin-top:10px">Vi kontaktar er inom 1 arbetsdag för att boka demo.</small>
         </div>
       
-        <div class="card">
-  <!-- Tom ruta, innehåll kommer senare -->
+       <div class="card">
+  <h3>Kunder vi hjälpt</h3>
+  <p>
+    "E-handlaren X halverade svarstiden och ökade konvertering med 12%" — Kundcase
+  </p>
 </div>
-
 
        
 
