Update index.html (11) (4) (1).html

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -208,8 +208,8 @@
         </div>
 
         <div style="margin-top:12px" class="card">
-          <h4>Kunder vi hjälpt</h4>
-          <p style="color:var(--muted)">"E-handlaren X halverade svaretiden och ökade konvertering med 12%" — Kundcase</p>
+          <h4></h4>
+          <p style="color:var(--muted)"></p>
         </div>
       </aside>
     </section>
