Update index.html (11) (4) (1).html

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -116,7 +116,7 @@
     <section class="hero">
       <div>
         <div class="card">
-          <h1>Automatisera kundsupport — snabbare svar, nöjdare kunder</h1>
+          <h1>Svarar kunder dygnet runt – utan att anställa fler</h1>
           <p class="lead">Vi bygger chat- och mailbots som hanterar vanliga frågor, bokningar och returer — integrerat med ert CRM och med smidig mänsklig fallback när det behövs.</p>
           <div class="features">
             <div class="feature"> 24/7 FAQ-bot</div>
