--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -126,7 +126,7 @@
           </div>
 
           <p id="more-text" style="display:none; color:var(--muted); margin-top:12px;">Våra AI-baserade lösningar integreras sömlöst med era befintliga system. Vi erbjuder anpassade träning på era interna dokument för att säkerställa att botten ger korrekta och relevanta svar. Dessutom inkluderar vi mänsklig övervakning och fallback för komplexa frågor.</p>
-          <button onclick="toggleMore()" class="btn ghost" style="margin-top:12px;">Läs mer</button>
+          <button onclick="toggleMore()" class="btn ghost" style="margin-top:12px;">Se detaljer</button>
 
           <div class="pricing-grid">
             <div class="price">
@@ -140,8 +140,8 @@
   </ul>
 
   <div class="cta">
-    <a class="btn primary" href="#kontakt">Starta demo</a>
-    <a class="btn ghost" href="#starter">Läs mer</a>
+    <a class="btn primary" href="#kontakt">Boka gratis demo</a>
+    <a class="btn ghost" href="#starter">Se detaljer</a>
   </div>
 </div>
             <div class="price">
@@ -167,7 +167,7 @@
   <li>Ticket-automatisering</li>
   <li>Fine-tuning på interna dokument</li>
 </ul>
-<div class="cta"><a class="btn primary" href="#kontakt">Starta demo</a><a class="btn ghost" href="#priser">Läs mer</a></div>
+<div class="cta"><a class="btn primary" href="#kontakt">Boka gratis demo</a><a class="btn ghost" href="#priser">Se detaljer</a></div>
 <p style="font-size:13px;color:var(--muted);margin-top:6px;">
 </p>
 <p style="font-size:13px;color:var(--muted);margin-top:6px;">
@@ -181,7 +181,7 @@
                 <li>Ticket-automatisering</li>
                 <li>Fine-tuning på interna dokument</li>
               </ul>
-              <div class="cta"><a class="btn primary" href="#kontakt">Starta demo</a><a class="btn ghost" href="#priser">Läs mer</a></div>
+              <div class="cta"><a class="btn primary" href="#kontakt">Boka gratis demo</a><a class="btn ghost" href="#priser">Se detaljer</a></div>
             </div>
           </div>
         </div>
