Update index.html (11) (4) (1).html

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -140,7 +140,7 @@
   </ul>
 
   <div class="cta">
-    <a class="btn primary" href="#kontakt">Boka gratis demo</a>
+    <a class="btn primary" href="#kontakt">Starta demo</a>
     <a class="btn ghost" href="#starter">Läs mer</a>
   </div>
 </div>
@@ -167,7 +167,7 @@
   <li>Ticket-automatisering</li>
   <li>Fine-tuning på interna dokument</li>
 </ul>
-<div class="cta"><a class="btn primary" href="#kontakt">Boka gratis demo</a><a class="btn ghost" href="#priser">Läs mer</a></div>
+<div class="cta"><a class="btn primary" href="#kontakt">Starta demo</a><a class="btn ghost" href="#priser">Läs mer</a></div>
 <p style="font-size:13px;color:var(--muted);margin-top:6px;">
 </p>
 <p style="font-size:13px;color:var(--muted);margin-top:6px;">
@@ -181,7 +181,7 @@
                 <li>Ticket-automatisering</li>
                 <li>Fine-tuning på interna dokument</li>
               </ul>
-              <div class="cta"><a class="btn primary" href="#kontakt">Boka gratis demo</a><a class="btn ghost" href="#priser">Läs mer</a></div>
+              <div class="cta"><a class="btn primary" href="#kontakt">Starta demo</a><a class="btn ghost" href="#priser">Läs mer</a></div>
             </div>
           </div>
         </div>
