Update index.html (11) (4) (1).html

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -140,7 +140,13 @@
   </ul>
 
   <div class="cta">
-    <a class="btn primary" href="#kontakt">Starta demo</a>
+  <a href="/starta-demo" class="btn-demo">
+  Starta demo
+</a>
+
+  Starta demo
+</a>
+
     <a class="btn ghost" href="#starter">Läs mer</a>
   </div>
 </div>
