Update index.html (11) (4) (1).html

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -140,9 +140,30 @@
   </ul>
 
   <div class="cta">
-<a href="/starta-demo" class="btn-demo">
+<a
+  href="/starta-demo"
+  class="btn-demo force-btn"
+>
   Starta demo
 </a>
+.force-btn {
+  background-color: #c4a26a !important;
+  color: #ffffff !important;
+  text-decoration: none !important;
+  border-radius: 999px !important;
+  padding: 12px 22px !important;
+  font-weight: 600 !important;
+  font-size: 14px !important;
+  display: inline-flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  border: none !important;
+}
+
+.force-btn:hover {
+  background-color: #b3925c !important;
+}
+
 
 
   Starta demo
