Update index.html (11) (4) (1).html

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -142,9 +142,9 @@
   <div class="cta"><div class="cta"><a class="btn primary" href="#kontakt">Starta demo</a>
 <a>
   Starta demo
-</a>
+<a class="btn" href="/starta-demo">Starta demo</a>
+<a class="btn ghost" href="#starter">Läs mer</a>
 
-    <a class="btn ghost" href="#starter">Läs mer</a>
   </div>
 </div>
             <div class="price">
