Update index.html (11) (4) (1).html

--- a/index.html (11) (4) (1).html
+++ b/index.html (11) (4) (1).html
@@ -138,13 +138,10 @@
     <li>Automatiserade svar på vanliga kundfrågor</li>
     <li>Grundläggande rapportering</li>
   </ul>
-
-  <div class="cta"><div class="cta"><a class="btn primary" href="#kontakt">Starta demo</a>
-<a>
-  Starta demo
-<a class="btn" href="/starta-demo">Starta demo</a>
-<a class="btn ghost" href="#starter">Läs mer</a>
-
+<div class="cta">
+  <a class="btn primary" href="/starta-demo">Starta demo</a>
+  <a class="btn ghost" href="#starter">Läs mer</a>
+</div>
   </div>
 </div>
             <div class="price">
